reach buttons ui fixed on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -366,6 +366,8 @@ html [data-reach-menu-button] {
   outline: none;
   display: flex;
   align-items: center;
+  -webkit-appearance: none;
+  -moz-appearance: none;
 }
 
 html [data-reach-menu-list],
